--- a/biostatistics.html
+++ b/biostatistics.html
@@ -171,7 +171,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oQzfbfwz'>Premier Research Careers - Biostatistical Programmer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/premier-research/job/oQzfbfwz'>Premier Research Careers - Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
@@ -249,7 +249,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Maine, United States</span></p>
 <p>Posted on: 2019-09-14</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/o2rAafwX'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/o2rAafwX'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Kiev, Ukraine</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
@@ -257,7 +257,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Sofia, Bulgaria</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oHrAafwC'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/premier-research/job/oHrAafwC'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Wokingham, United Kingdom</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
@@ -273,7 +273,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Brisbane</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/o2rAafwX'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='https://jobs.jobvite.com/premier-research/job/o2rAafwX'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Kiev, Ukraine</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -285,7 +285,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Wokingham, United Kingdom</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/oLrAafwG'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='https://jobs.jobvite.com/premier-research/job/oLrAafwG'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Darmstadt, Germany</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -297,7 +297,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Warsaw, Poland</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<h5><a href='http://icrw.applicantstack.com/x/detail/a25z2g1385z8'>Biostatistician Consultant</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://icrw.applicantstack.com/x/detail/a25z2g1385z8'>Biostatistician Consultant</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... All three evaluations are longitudinal cohort cluster designs with baseline, 
 midline and endline quantitative data collection points. The primary outcomes of
@@ -315,7 +315,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">Cambridge  Cambridge  Cambridge</span></p>
 <p>Posted on:: 2019-09-06</p>
 <hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistics-team-leader-bellshill-4069'>Biostatistics Team Leader - Bellshill - PPD Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistics-team-leader-bellshill-4069'>Biostatistics Team Leader - Bellshill - PPD Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
@@ -476,7 +476,7 @@ of focus, using the appropriate statistical and machine learning methodologies?.
 <p>Jul 21, 2019 ... JAX was voted among the top 15 ?Best Places to Work in Academia? in the United 
 States in a poll conducted by The Scientist magazine! Our Values: INTEGRITY?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=o2rAafwX&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=nlwb1Lwj'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=o2rAafwX&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=nlwb1Lwj'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-08-01</p>
 <hr/>
@@ -500,7 +500,7 @@ States in a poll conducted by The Scientist magazine! Our Values: INTEGRITY?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
