--- a/statistics.html
+++ b/statistics.html
@@ -79,7 +79,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://odum.unc.edu/2019/10/statsconsultant-job/'>Part-time Job Opening: Statistical Consultant?(Spring 2020) - The Odum Institute</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://odum.unc.edu/2019/10/statsconsultant-job/'>Part-time Job Opening: Statistical Consultant?(Spring 2020) - The Odum Institute</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -109,7 +109,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698271162-statistical-programmer'>Biogen Statistical Programmer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698271162-statistical-programmer'>Biogen Statistical Programmer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -127,7 +127,7 @@
 reporting needs by analyzing the data and presenting the findings to the 
 organization?...</p>
 <hr/>
-<h5><a href='https://postings.com/recruiter-1130798/jobs/science-biotech/remote-principal-sr-principal-biostatistician-durham-nc-2710/83975'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://postings.com/recruiter-1130798/jobs/science-biotech/remote-principal-sr-principal-biostatistician-durham-nc-2710/83975'>
 Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori Steiner
 </a></h5> 
 <p><span class="badge badge-light">Durham, NC</span></p>
@@ -195,7 +195,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://www.welovegolang.com/jobs/back-end-software-engineer-5768301728759808'>Back-End software Engineer at Office for National Statistics - We Love Go</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.welovegolang.com/jobs/back-end-software-engineer-5768301728759808'>Back-End software Engineer at Office for National Statistics - We Love Go</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -207,7 +207,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/statistical-programmer-%E2%80%93-data-warehouse-specialist-31532'>Statistical Programmer ? Data Warehouse Specialist - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/statistical-programmer-%E2%80%93-data-warehouse-specialist-31532'>Statistical Programmer ? Data Warehouse Specialist - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -215,7 +215,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/statistical-programmer-31535'>Statistical Programmer - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/statistical-programmer-31535'>Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -227,7 +227,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qdxaVfwz&k=Job&j=oZOK6fwn&__jvst=Employee&__jvsd=sezSahwB&__jvsc=Twitter&bid=n14bgMwN'> HHB Systems Careers - Statistician/Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qdxaVfwz&k=Job&j=oZOK6fwn&__jvst=Employee&__jvsd=sezSahwB&__jvsc=Twitter&bid=n14bgMwN'> HHB Systems Careers - Statistician/Data Scientist</a></h5> 
 <p><span class="badge badge-light">Springfield, Virginia</span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
@@ -250,7 +250,7 @@ science, or a related area by the time of appointment. Successful candidates?...
 validation plan and blinded data review; - Performs SAS programming to 
 generate?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/nubank/jobs/1893969?gh_src=ddb1578c1'>Job Application for Data Scientist (Econometrics/Statistics Specialist) at Nubank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nubank/jobs/1893969?gh_src=ddb1578c1'>Job Application for Data Scientist (Econometrics/Statistics Specialist) at Nubank</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
@@ -285,7 +285,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AdventGlobalSolutions1/743999697405092-biostatistician'>Advent Global Solutions Biostatistician | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdventGlobalSolutions1/743999697405092-biostatistician'>Advent Global Solutions Biostatistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Los Angeles Los Angeles, CA, USA</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
